fix: prevent overflow

--- a/src/renderer/src/assets/base.css
+++ b/src/renderer/src/assets/base.css
@@ -186,6 +186,12 @@
   --font-heading: "Geist", ui-sans-serif, system-ui, sans-serif;
 }
 
+html,
+body {
+  height: 100%;
+  overflow: hidden;
+}
+
 @layer base {
   * {
     @apply border-border outline-ring/50;
